# avTools

./: .gitignore  README.md  WINDOWING_PLAN.md  avtools.code-workspace  deno.json  setup.sh  setup_old.sh
apps/browser-projections/: README.md  package-lock.json  package.json  postFX_UI.md  shader_pass_architecture.md  tsconfig.app.json  tslab_test_notebook.ipynb  vite.canvas.config.ts  vite.config.ts  vite.piano-roll.config.ts
apps/deno-notebooks/: .gitignore  README.md  bugs.md  deno.json  denoMPEPlayback.md  denoMidiPlan.md  midi_one_note_test.ts  raw-webgpu-clickav-melody-launcher.ipynb  raw-webgpu-clickav-melody-launcher.ts  raw-webgpu-helpers.ts  raw-webgpu-moving-circle.ts  raw-webgpu-power2d-shaderfx.ts  raw-webgpu-windowed.ts  rebuild_venv_and_install_kernel.txt  testNotebook.ipynb  testcommands.md  three_test.ts  three_test_debug.ts  three_test_headless.ts  tone_test.ipynb  tone_test.ts
apps/deno-notebooks/native/midi_bridge/: Cargo.toml
apps/deno-notebooks/native/midi_bridge/src/: input.rs  lib.rs  output.rs  packet.rs  ports.rs
skills/: core-timing.md  creative-algs.md  music-types.md  power2d-codegen.md  power2d.md  shader-fx.md  ui-bridge.md
skills/core-timing/: SKILL.md
skills/creative-algs/: SKILL.md
skills/music-types/: SKILL.md
skills/power2d/: SKILL.md
skills/power2d-codegen/: SKILL.md
skills/ui-bridge/: SKILL.md
tools/shader-watch/: deno.json  watch.ts  watch_compute_raw.ts  watch_power2d_raw.ts  watch_shaderfx_raw.ts
tools/vite-shader-plugin/: index.ts
webcomponents/animation-editor/: package.json
(+187 files in other folders)
