[package]
name = "midi_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
crossbeam-channel = "0.5"
midir = "0.10.3"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
